feat: actualizar mensajes de carga y no encontrado para reflejar la terminología de clanes

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -83,10 +83,10 @@
   "Criptomonedas": "Cryptocurrencies",
 
 
-  "Cargando grupo...": "Loading group...",
-  "Grupo no encontrado.": "Group not found.",
+  "Cargando...": "Loading...",
+  "Clan no encontrado.": "Clan not found.",
   "Descripción:": "Description:",
-  "El grupo tiene": "This group has",
+  "El clan tiene": "This clan has",
   "visitas": "visits",
   "Recuerda: evita compartir información personal en": "Remember: avoid sharing personal information in",
   "Nunca se sabe quién puede estar leyendo. Mantengamos": "You never know who might be reading. Let's keep",
