feat: agregar traducción para el mensaje "Publica tu clan AHORA !!" y limpiar código en ClashRoyaleClient

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -143,6 +143,7 @@
   "Detectado: grupo de WhatsApp": "Detected: WhatsApp group",
   "Detectado: canal de WhatsApp": "Detected: WhatsApp channel",
   "Enlace no válido de grupo o canal": "Invalid group or channel link",
+  "Publica tu clan AHORA !!": "Publish your clan NOW !!",
 
 
 "mobileTitle": "Active Clash Royale Clans in 2025",
