feat: agregar traducciones para mensajes de clan en la interfaz de usuario

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -144,6 +144,14 @@
   "Detectado: canal de WhatsApp": "Detected: WhatsApp channel",
   "Enlace no válido de grupo o canal": "Invalid group or channel link",
   "Publica tu clan AHORA !!": "Publish your clan NOW !!",
+  "Ver Miembros del Clan": "View Clan Members",
+  "Trofeos Requeridos": "Required Trophies",
+  "Trofeos de Guerra": "War Trophies",
+  "Estadísticas Clave": "Key Statistics",
+  "Donaciones": "Donations",
+  "Miembros": "Members",
+  "Ubicación": "Location",
+  "Acceder al Clan": "Join Clan",
 
 
 "mobileTitle": "Active Clash Royale Clans in 2025",
