feat: agregar traducciones para "Abierto", "Cerrado" y "Minimo de Trofeos"; actualizar etiquetas en la interfaz

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -152,6 +152,11 @@
   "Miembros": "Members",
   "Ubicación": "Location",
   "Acceder al Clan": "Join Clan",
+  "Descripción del Clan": "Clan Description",
+  "Abierto": "Open",
+  "Cerrado": "Closed",
+  "Minimo de Trofeos": "Minimum Trophies",
+  "Todos los Clanes": "All Clans",
 
 
 "mobileTitle": "Active Clash Royale Clans in 2025",
