feat: agregar traducciones para mensajes de la interfaz de usuario en inglés

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -157,6 +157,16 @@
   "Cerrado": "Closed",
   "Minimo de Trofeos": "Minimum Trophies",
   "Todos los Clanes": "All Clans",
+  "Publica tu clan": "Publish your clan",
+  "Publica tu grupo GRATIS !!": "Publish your group for FREE !!",
+  "Ver todos los grupos de WhatsApp": "View all WhatsApp groups",
+  "Grupos nuevos de WhatsApp": "New WhatsApp groups",
+  "Grupos nuevos y destacados de WhatsApp": "New and featured WhatsApp groups",
+  "Ver todos los grupos de Telegram": "View all Telegram groups",
+  "En": "In",
+  "puedes unirte fácilmente a comunidades populares en": "you can easily join popular communities in",
+  "y juegos como": "and games like",
+  "Explora grupos organizados por temas, idiomas y más.": "Explore groups organized by topics, languages, and more.",
 
 
 "mobileTitle": "Active Clash Royale Clans in 2025",
