feat: agregar traducción para "Explorar Grupos Populares" y actualizar su uso en la interfaz

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -167,6 +167,7 @@
   "puedes unirte fácilmente a comunidades populares en": "you can easily join popular communities in",
   "y juegos como": "and games like",
   "Explora grupos organizados por temas, idiomas y más.": "Explore groups organized by topics, languages, and more.",
+  "Explorar Grupos Populares": "Explore Popular Groups",
 
 
 "mobileTitle": "Active Clash Royale Clans in 2025",
